# backvonia

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  config.yaml.example  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
docs/: api.yml  entity.txt  prd.txt
entity/: Cargo.toml
entity/src/: ai_image_generation.rs  credit_purchases.rs  credits_events.rs  iap_receipt_cache.rs  lib.rs  prelude.rs  quota_usage.rs  refresh_tokens.rs  sea_orm_active_enums.rs  user_auth_methods.rs  user_credit_balance.rs  user_iap_receipts.rs  users.rs  welcome_bonuses.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241201_000001_add_extra_credits.rs  m20241203_000001_create_credit_balance.rs  m20251204_051334_create_welcome_bonuses_table.rs  m20251210_123319_create_ai_image_generations_table.rs  main.rs
scripts/: gen_entity.sh
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
src/middleware/: auth.rs  jwt_auth.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: ai.rs  auth.rs  common.rs  credit_events_ext.rs  credit_purchases_ext.rs  credits.rs  iap.rs  mod.rs
src/routes/: ai.rs  auth.rs  credits.rs  iap.rs  mod.rs
src/services/: ai_service.rs  auth_service.rs  credits_service.rs  iap_service.rs  jwt_service.rs  mod.rs  quota_service.rs  refresh_token_service.rs  storage_service.rs  welcome_bonus_service.rs
tests/integration/: ai_image_test.rs  backward_compatibility_test.rs  credits_test.rs  middleware_test.rs  mod.rs  quota_test.rs  race_condition_test.rs
